--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -44,7 +43,6 @@ nav ul li a:hover {
     transition: background-color 0.3s;
 }
 
-
 form {
     max-width: 600px;
     margin: 20px auto;
@@ -64,13 +62,26 @@ form label {
 form input[type="text"],
 form input[type="date"],
 form input[type="password"],
-form input[type="email"] {
+form input[type="email"],
+form input[type="number"],
+form input[type="tel"],
+form input[type="color"],
+form select,
+form textarea {
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+}
+
+/* Tamaño más grande para el textarea de texto adicional */
+#texto {
+    height: 150px; /* Ajusta este valor según lo que desees */
+    width: 100%; /* Asegura que ocupe todo el ancho disponible */
+    padding: 10px;
+    box-sizing: border-box;
 }
 
 form button {
@@ -86,7 +97,6 @@ form button {
 form button:hover {
     background: #555;
 }
-
 
 #mi_perfil {
     max-width: 800px;
@@ -104,7 +114,6 @@ form button:hover {
     color: #333;
 }
 
-
 h2 {
     text-align: center;
     margin: 0;
@@ -118,7 +127,6 @@ h3 {
     font-size: 1.2em;
     color: #333;
 }
-
 
 table {
     width: 100%;
@@ -138,7 +146,6 @@ table th {
     background: #444;
     color: #fff;
 }
-
 
 .cards-container {
     display: flex;
@@ -175,7 +182,6 @@ table th {
     color: #666;
 }
 
-
 .content-container {
     max-width: 800px;
     margin: 20px auto;
@@ -184,7 +190,6 @@ table th {
     border-radius: 15px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
 }
-
 
 @media screen and (max-width: 1024px) {
     .card {
@@ -197,7 +202,6 @@ table th {
         flex: 1 1 100%;
     }
 }
-
 
 @media screen and (min-width: 1024px) {
     .column-layout {
@@ -213,7 +217,6 @@ table th {
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
     }
 }
-
 
 @media screen and (max-width: 600px) {
     nav ul {
@@ -237,13 +240,11 @@ table th {
     }
 }
 
-
 .icon {
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
     margin-right: 5px;
 }
-
 
 nav ul li a::before {
     content: '\f007'; 
@@ -251,7 +252,6 @@ nav ul li a::before {
     font-weight: 900;
     margin-right: 8px;
 }
-
 
 footer {
     background-color: #333;
