--- a/styles/modo_impresion.css
+++ b/styles/modo_impresion.css
@@ -1,70 +1,22 @@
-@media print {
-    body {
-        background-color: white;
-        color: black;
-        font-size: 12pt;
-        font-family: serif;
-        line-height: 1.5; 
-    }
+@import url(styles.css);
 
-    nav, footer, .sidebar, .dynamic-content, form {
-        display: none; 
-    }
-
-    a:link, a:visited {
-        text-decoration: underline;
-        color: black; 
-    }
-
-    a:after {
-        content: " (" attr(href) ") "; 
-        font-size: 10pt;
-        color: gray;
-    }
-  
+html{
     
-    img {
-      display: none;
-    }
-  
-   
-    img.important {
-        display: block; 
-    }
+    --negrobasico: #040000;
+    --fondopagina: #0000;
+    --fondobotones: #0000;
+    --botonconfirmacion: transparent;
+    --bordeimagen: rgb(0, 0, 0);
+    --blancosuave: #0000;
+    --sombreado: transparent;
+    --gris: #0000;
+}
 
-    table, tr, td, th {
-        page-break-inside: avoid; 
-    }
+header, footer{
+    display: none;
+}
 
-    h1, h2, h3 {
-        page-break-before: avoid; 
-        page-break-after: avoid; 
-    }
+input{
 
-    p, blockquote, ul, ol, dl {
-        widows: 2; 
-        orphans: 2; 
-        margin-bottom: 15px; 
-    }
-
-    @page {
-        size: A4; 
-        margin: 2cm; 
-    }
-
-    footer::after {
-        content: "URL: " attr(data-url) " | Derechos de uso © 2024"; 
-        font-size: 10pt;
-        display: block;
-        margin-top: 20px;
-        text-align: center;
-    }
-
-    time::before {
-        content: attr(datetime);
-    }
-
-    article, section {
-        margin-bottom: 20px; 
-    }
+    border: 0.0625rem solid var(--negrobasico);
 }
