--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,31 +260,31 @@ footer {
     margin-top: 20px;
 }
 
-/* Estilos para el contenedor de dos columnas */
+
 .contenedor-columnas {
     display: flex;
     justify-content: space-between;
-    gap: 20px; /* Espacio entre las columnas */
+    gap: 20px; 
     margin: 20px auto;
-    max-width: 1200px; /* Ancho máximo para el contenedor */
+    max-width: 1200px; 
 }
 
-/* Estilos generales para cada columna */
+
 .columna {
-    flex: 1; /* Cada columna ocupará el mismo espacio */
-    background-color: #fff; /* Fondo blanco para ambas columnas */
+    flex: 1; 
+    background-color: #fff; 
     padding: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
 }
 
-/* Responsividad para pantallas pequeñas */
+
 @media (max-width: 768px) {
     .contenedor-columnas {
-        flex-direction: column; /* Las columnas se apilan una sobre otra */
+        flex-direction: column; 
     }
 
     .columna {
-        margin-bottom: 20px; /* Espacio entre las columnas cuando se apilan */
+        margin-bottom: 20px; 
     }
 }
