--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,28 +260,32 @@ footer {
     margin-top: 20px;
 }
 
+/* Ajuste de columnas */
 .contenedor-columnas {
     display: flex;
     justify-content: space-between;
     gap: 20px; 
     margin: 20px auto;
-    max-width: 1200px; 
+    max-width: 1200px;
+    flex-wrap: wrap; /* Esto permite que las columnas se apilen automáticamente si el espacio es pequeño */
 }
 
 .columna {
-    flex: 1; 
-    background-color: #fff; 
+    flex: 1;
+    background-color: #fff;
     padding: 20px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
 }
 
+/* Cuando la pantalla sea más pequeña, las columnas se apilarán */
 @media (max-width: 768px) {
     .contenedor-columnas {
-        flex-direction: column; 
+        flex-direction: column;
     }
 
     .columna {
-        margin-bottom: 20px; 
+        margin-bottom: 20px;
+        width: 100%; /* Asegura que la columna ocupe el 100% del ancho */
     }
 }
