--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,13 @@
+:root {
+    --font-size-small: 0.875em;  /* Equivalente a 14px si la fuente base es 16px */
+    --font-size-medium: 1em;     /* Equivalente a 16px si la fuente base es 16px */
+    --font-size-large: 1.125em;  /* Equivalente a 18px si la fuente base es 16px */
+    --font-size-xlarge: 1.25em;  /* Equivalente a 20px si la fuente base es 16px */
+}
+
 body {
     font-family: Arial, sans-serif;
+    font-size: var(--font-size-medium);
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -106,24 +114,17 @@ form button:hover {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
 }
 
-#mi_perfil h2 {
-    text-align: center;
-    margin: 0;
-    font-size: 1.5em;
-    color: #333;
-}
-
 h2 {
     text-align: center;
     margin: 0;
-    font-size: 1.5em;
+    font-size: calc(var(--font-size-medium)* 1.5);
     color: #333;
 }
 
 h3 {
     text-align: center;
     margin: 0;
-    font-size: 1.2em;
+    font-size: var(--font-size-large);
     color: #333;
 }
 
@@ -177,7 +178,7 @@ table th {
 }
 
 .card p {
-    font-size: 0.9em;
+    font-size: var(--font-size-small);
     color: #666;
 }
 
@@ -235,7 +236,7 @@ table th {
     }
 
     table {
-        font-size: 14px;
+        font-size: var(--font-size-small);
     }
 }
 
@@ -295,15 +296,13 @@ footer {
 
 .error-message {
     color: red; 
-    font-size: 0.9em; 
+    font-size: var(--font-size-small); 
     margin-top: 0.2em; 
 }
-
 
 .oculto {
     display: none; 
 }
-
 
 .registro-boton {
     text-align: center;
@@ -317,7 +316,7 @@ footer {
     color: white;
     text-decoration: none;
     border-radius: 5px;
-    font-size: 16px;
+    font-size: var(--font-size-large);
     font-weight: bold;
     transition: background-color 0.3s ease;
     cursor: pointer;
