--- a/styles/alto_contraste.css
+++ b/styles/alto_contraste.css
@@ -1,8 +1,15 @@
-@import url('styles.css');
+
+:root {
+    --font-size-small: 0.875em;  /* Equivalente a 14px si la fuente base es 16px */
+    --font-size-medium: 1em;     /* Equivalente a 16px si la fuente base es 16px */
+    --font-size-large: 1.125em;  /* Equivalente a 18px si la fuente base es 16px */
+    --font-size-xlarge: 1.25em;  /* Equivalente a 20px si la fuente base es 16px */
+}
 body {
     background-color: #000;
     color: #fff;
     font-family: Arial, sans-serif;
+    font-size: var(--font-size-medium);
     margin: 0;
     padding: 0;
     line-height: 1.6;
@@ -107,8 +114,16 @@ form button:hover {
 
 h2 {
     text-align: center;
-    color: #fff;
-    margin: 20px 0;
+    margin: 0;
+    font-size: calc(var(--font-size-medium)* 1.5);
+    color: #d6d6d6;
+}
+
+h3 {
+    text-align: center;
+    margin: 0;
+    font-size: var(--font-size-large);
+    color: #e0e0e0;
 }
 
 .cards-container {
