--- a/styles/mejorar_accesibilidad.css
+++ b/styles/mejorar_accesibilidad.css
@@ -1,8 +1,8 @@
 @import url('alto_contraste.css');
 
 :root {
-    --font-size-small: 1.125em;      /* Equivale aproximadamente a 18px */
-    --font-size-medium: 1.375em;     /* Equivale aproximadamente a 22px */
-    --font-size-large: 1.625em;      /* Equivale aproximadamente a 26px */
-    --font-size-xlarge: 1.875em;     /* Equivale aproximadamente a 30px */
+    --font-size-small: 1.125em;      
+    --font-size-medium: 1.375em;     
+    --font-size-large: 1.625em;      
+    --font-size-xlarge: 1.875em;     
 }
